# waylandx

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
protocols/: wlr-layer-shell-unstable-v1.xml  wlr-output-management-unstable-v1.xml
src/: client.hpp  egl_connection.hpp  main.cpp  wl_connection.cpp  wl_connection.hpp  wl_event_loop.cpp  wl_event_loop.hpp  wl_protocol.hpp  x_connection.hpp  x_window.hpp
src/protocols/wl/: compositor.cpp  compositor.hpp  seat.cpp  seat.hpp  shm.cpp  shm.hpp
src/protocols/xdg/: wm_base.cpp  wm_base.hpp
src/protocols/zwp/: linux_dmabuf.cpp  linux_dmabuf.hpp
